Implemented AcceptTicket API